Feat(FE): Catálogo especies y razas por especie.RFG-104
